# Quantized_Resnet_FPGA

c++/: CMakeLists.txt  all_weights_loader.h  fpga_quantized_conv.cc  fpga_quantized_conv.h  main.cpp  resnet_model.cpp  resnet_model.h
c++/cpp_baseline/: CMakeLists.txt  all_weights_loader.cpp  main.cpp  resnet_model.cpp  resnet_model.h
c++/hls_test/: CMakeLists.txt  all_weights_loader.cpp  fpga_conv_functor.cpp  fpga_conv_functor.h  fpga_conv_kernel.hpp  fpga_quantized_conv.cc  fpga_quantized_conv.cpp  fpga_quantized_conv.h  kernel.cpp  kernel.h  main.cpp  resnet_model.cpp  resnet_model.h
c++/opencl_test/: CMakeLists.txt  Makefile  all_weights_loader.h  fpga_conv_functor.cpp  fpga_conv_functor.h  fpga_quantized_conv.cpp  fpga_quantized_conv.h  kernel.cpp  main.cpp  resnet_model.cpp  resnet_model.h
c++/opencl_test/harness/: harness.mk
c++/opencl_test/harness/ocl_src/: CLWorld.cpp  CLWorld.h
python/: get_quantized_weight.py  graph_quantize.py  imagenet_preprocessing.py  load_model.py  quantized_test.py  renet_test.py  resnet50.py  resnet_run.py  test_model.py
weights/: ILSVRC2012_val_00000001.pb  Matmul.pb  bias.pb
weights/batchnorm/pb/: mean_0.pb  mean_1.pb  mean_10.pb  mean_11.pb  mean_12.pb  mean_13.pb  mean_14.pb  mean_15.pb  mean_16.pb  mean_17.pb  mean_18.pb  mean_19.pb  mean_2.pb  mean_20.pb  mean_21.pb  mean_22.pb  mean_23.pb  mean_24.pb  mean_25.pb  mean_26.pb  mean_27.pb  mean_28.pb  mean_29.pb  mean_3.pb  mean_30.pb  mean_31.pb  mean_32.pb  mean_33.pb  mean_34.pb  mean_35.pb  mean_36.pb  mean_37.pb  mean_38.pb  mean_39.pb  mean_4.pb  mean_40.pb  mean_41.pb  mean_42.pb  mean_43.pb  mean_44.pb  (+171 more)
weights/conv/: max.txt  min.txt
weights/conv/pb/: filter_0_quint8_const.pb  filter_0_uint8_const.pb  filter_10_quint8_const.pb  filter_10_uint8_const.pb  filter_11_quint8_const.pb  filter_11_uint8_const.pb  filter_12_quint8_const.pb  filter_12_uint8_const.pb  filter_13_quint8_const.pb  filter_13_uint8_const.pb  filter_14_quint8_const.pb  filter_14_uint8_const.pb  filter_15_quint8_const.pb  filter_15_uint8_const.pb  filter_16_quint8_const.pb  filter_16_uint8_const.pb  filter_17_quint8_const.pb  filter_17_uint8_const.pb  filter_18_quint8_const.pb  filter_18_uint8_const.pb  filter_19_quint8_const.pb  filter_19_uint8_const.pb  filter_1_quint8_const.pb  filter_1_uint8_const.pb  filter_20_quint8_const.pb  filter_20_uint8_const.pb  filter_21_quint8_const.pb  filter_21_uint8_const.pb  filter_22_quint8_const.pb  filter_22_uint8_const.pb  filter_23_quint8_const.pb  filter_23_uint8_const.pb  filter_24_quint8_const.pb  filter_24_uint8_const.pb  filter_25_quint8_const.pb  filter_25_uint8_const.pb  filter_26_quint8_const.pb  filter_26_uint8_const.pb  filter_27_quint8_const.pb  filter_27_uint8_const.pb  (+66 more)
